# avengercon_2025

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .safety-project.ini  404.html  Dockerfile  DockerfileAvengercon  DockerfileKasmUbuntu  README.md  docker-compose-dev-container.amd64.yaml  docker-compose-dev-container.arm64.yaml  docker-compose-dev-container.local-build.yaml  docker-compose-dev-container.yaml  docker-compose.avengercon-2025.celery.yaml  docker-compose.avengercon-2025.dask.yaml  docker-compose.avengercon-2025.yaml  docker-compose.dev-container.yaml  env_reset.sh  full_reset.sh  index.html  initialize_env.sh  mkdocs.yml  objects.inv  pyproject.toml  run_dev.sh  run_dev_celery.sh  run_dev_dask.sh  run_dev_desktop.sh  tox.ini
.github/workflows/: docker-publish.yml  docs.yml
avengercon/: __init__.py  config.py
avengercon/celery/: tasks.py
avengercon/minio/: __init__.py
avengercon/redis/: __init__.py  tasks.py
data/: README.md
data/Warships/: .gitignore
developers/cloudflare/: index.html
developers/docker/: index.html
developers/docs/: index.html
developers/gitlab_ci/: index.html
developers/os/: index.html
developers/postgres/: index.html
developers/sqlalchemy_alembic/: index.html
developers/testing/: index.html
developers/traefik/: index.html
docs/: index.md
docs/workshop/: 10_ORM_DBT.md  11_beam.md  1_hello_workshop.md  2_data_engineering_primer.md  3_pandas.md  4_pydantic.md  5_regex.md  6_python_wheels.md  7_dask.md  8_celery.md  9_automation.md  9_prefect_airflow.md
requirements/: requirements-dev.txt  requirements-mkdocs.txt  requirements-mypy.txt  requirements-pytest.txt  requirements.txt
scripts/: kasm_ubuntu_python_deps_install.sh  kasm_ubuntu_python_final_setup.sh
search/: search_index.json
tests/: __init__.py  celery_test.py  conftest.py  minio_test.py  redis_test.py
workshop/10_ORM_DBT/: index.html
workshop/11_beam/: index.html
workshop/1_hello_workshop/: index.html
workshop/2_data_engineering_primer/: index.html
workshop/3_pandas/: index.html
workshop/4_pydantic/: index.html
workshop/5_regex/: index.html
workshop/6_python_wheels/: index.html
workshop/7_dask/: index.html
workshop/8_celery/: index.html
workshop/9_automation/: index.html
